--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "multer": "^1.4.5-lts.2",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
